2024-11-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* tests/rwfile.c: Fix appending file name.

	* coders/bmp.c (ReadBMPImage): Assure that opacity channel is
	initialized, even if matte is not true.  May help regarding
	GraphicsMagick discussion thread "Opacity of whole Magick::image
	is set to the value 205 after reading a 24-bit-bmp".

	* coders/svg.c (ReadSVGImage): Added comments.

	* magick/render.c (DrawImage): Added comments.

	* tests/rwfile.c: More fixes for GCC warnings.

2024-11-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* tests/bitstream.c: Tidy printfs and exit status.

	* tests/bitstream.tap: Add a simple bitstream test to test suite.

2024-10-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawImage): Add more validity checks for color
	database lookup requests.

2024-10-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jp2.c (ReadJP2Image): Trace JPEG 2000 component
	parameters.

	* fuzzing/oss-fuzz-build.sh: Skip re-bootstrap of GraphicsMagick
	since it sometimes fails due to network issues.
	(enable_x265): Enable x265 in oss-fuzz build (and re-enable de265,
	which was accidentally disabled).

2024-10-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/heif.c (ReadMetadata): Address oss-fuzz issue 376100386
	"graphicsmagick:coder_AVIF_fuzzer: Undefined-shift in
	ReadMetadata", which is due to an unsigned char being promoted to
	a signed int prior to shifting.  The sample input file is valid.

	* TclMagick/Makefile.am (EXTRA_DIST): Assure that all source files
	are included by 'make dist'.

2024-10-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* TclMagick/Makefile.am: Name installed TclMagick/TkMagick
	libraries similar to names generated by the TEA tcl.m4 module.
	For example, name as TclMagick0.46.so and TkMagick0.46.so.

2024-10-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* tests/{constitute.c, rwblob.c, rwfile.c}: Eliminate ugly