@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020241114"
-#define public MagickPackageReleaseDate "snapshot-20241114"
+#define public MagickPackageVersionAddendum ".020241117"
+#define public MagickPackageReleaseDate "snapshot-20241117"
